--- a/resume.html
+++ b/resume.html
@@ -9,22 +9,38 @@
 <p>Student at University Of Belize </p>
 <p>Address:St john Street ,Belmopan</P>
 <p>Courses : 5 </p>
-<P>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <p>link to page: https://www.ubelearn.com/</P>
+<style>
+table, th, td { 
+  border:1px solid black;
+}
+</style>
+<body>
+<h2>A basic HTML table</h2>
+
+<table style="width:100%">
+  <tr>
+    <th>Monday</th>
+    <th>Tuesday</th>
+    <th>Wednesday</th>
+	<th>Thursday</th>
+  </tr>
+  <tr>
+    <td>Critical Thinking</td>
+    <td>Fundamental Of Computing</td>
+    <td>Critical Thinking</td>
+	<td>Fundamental Of Computing</td>
+  </tr>
+  <tr>
+    <td>Programming 1</td>
+    <td>Pyschology</td>
+    <td>programming 1</td>
+	<td>Pyschology</td>
+   </tr>
+   <tr>
+    <td>Developmental Math</td>
+  </tr>
+</table>
 
 
 
