--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,9 @@
 <head>
 <title>Resume</title>
 </head>
-<body>
+body{
+	background-color: lightblue;
+	}
 
 <h1>Micheal Salam</h1>
 <p>Student at University Of Belize </p>
