--- a/resume.html
+++ b/resume.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-<h1>Micheal Salam</h1>
-<p>Student at University Of Belize </p>
-<p>Address:St john Street ,Belmopan</P>
-<p>Courses : 5 </p>
-<p>link to page: https://www.ubelearn.com/</P>
+<h1 style="font-size:50px;">Micheal Salam</h1>
+<p style="font-size:25px;">Student at University Of Belize </p>
+<p style="font-size:25px;">Address:St john Street ,Belmopan</P>
+<p style="font-size:25px;">Courses : 5 </p>
+<p><a href="link to page: https://www.ubelearn.com/">Visit UB.com!!</a></P>
 <style>
 table, th, td { 
   border:1px solid black;
